fix style for light and dark mode

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -12,8 +12,9 @@ $box-shadow-card-color: var(--box-shadow-card-color);
 
 .card {
 	border: 1px solid $border-color;
-	border-radius: 8px;
-	box-shadow: 0px 1px 20px -4px $box-shadow-card-color;
+	//border-radius: 8px;
+	border-radius: 8px 8px 8px 0;
+	box-shadow: 0 1px 20px -4px $box-shadow-card-color;
 	background-color: $bg-color;
 	.card-header {
 		border-bottom: none;
@@ -51,7 +52,7 @@ $box-shadow-card-color: var(--box-shadow-card-color);
 		background-color: $bg-color;
 		color: $text-color;
 		border-radius: 8px;
-		padding: 24px 40px 60px 40px;
+		padding: 8px 24px 60px;
 	}
 	.card-footer {
 		background-color: $bg-color;
